# bilbycast-relay

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DCO.md  LICENSE  LICENSE.commercial  README.md  relay-config.example.json
.claude/: settings.json
.claude/projects/-Users-rezarahimi-Development-bilbycast-bilbycast-relay/memory/: MEMORY.md  feedback_update_docs.md  user_priorities.md
.github/workflows/: nightly-release.yml
docs/: ARCHITECTURE.md  distribution.md  events-and-alarms.md
packaging/: bilbycast-relay.service  bilbycast-relay.sysusers  install-relay.sh  uninstall-relay.sh  upgrade-relay.sh
src/: api.rs  auth.rs  bond_bridge.rs  config.rs  distribution_control.rs  lib.rs  main.rs  observability.rs  protocol.rs  server.rs  session.rs  stats.rs  tunnel_router.rs  udp_relay.rs  util.rs
src/distribution/: cascade.rs  es.rs  hub.rs  ingest.rs  mod.rs  origin.rs  player.html  token.rs  whep.rs  whip_ingest.rs
src/distribution/webrtc/: mod.rs  rtp_h264.rs  session.rs
src/manager/: client.rs  events.rs  mod.rs
tests/: demo_scenario.rs  direct_tunnel.rs  distribution.rs  integration.rs
