[package]
name = "bilbycast-relay"
version = "0.2.2"
edition = "2024"
description = "QUIC relay server for bilbycast IP tunneling between NAT'd edge nodes"
license = "Elastic-2.0"

[dependencies]
# QUIC
quinn = "0.11.9"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2.0"
rcgen = "0.14.7"

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }

# HTTP API
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# CLI
clap = { version = "4.6.0", features = ["derive"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Concurrency
dashmap = "6.1.0"

# WebSocket client (manager connection)
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
chrono = { version = "0.4.44", features = ["serde"] }

# Utilities
uuid = { version = "1.22.0", features = ["v4", "serde"] }
anyhow = "1.0.102"
bytes = "1.11.1"

[dev-dependencies]
tempfile = "3"
