[package]
name = "bilbycast-relay"
version = "0.10.1"
edition = "2024"
description = "QUIC relay server for bilbycast IP tunneling between NAT'd edge nodes"
license = "AGPL-3.0-or-later"

[dependencies]
# QUIC
quinn = "0.11.9"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2.0"
rcgen = "0.14.7"

# Async runtime
tokio = { version = "1.52.1", features = ["full"] }

# Direct socket-option control for IPV6_V6ONLY on dual-stack QUIC + REST listeners.
socket2 = "0.6.3"

# HTTP API
axum = "0.8.9"
tower-http = { version = "0.7.0", features = ["cors"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Concurrency
dashmap = "7.0.0-rc2"

# WebSocket client (manager connection)
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
chrono = { version = "0.4.44", features = ["serde"] }

# Utilities
uuid = { version = "1.23.1", features = ["v4", "serde"] }
anyhow = "1.0.102"
bytes = "1.11.1"

# Certificate pinning (SHA-256 fingerprint)
sha2 = "0.11.0"
hmac = "0.13.0-rc.4"
webpki-roots = "1.0.7"

# Lock-free cell used by the always-compiled `distribution_control` module (the
# runtime config the manager pushes over WS) + the per-stream keyframe cache.
# Non-optional so the manager-client command handler can hold a
# `DistributionControl` handle without a feature gate. Tiny crate.
arc-swap = "1.7.1"

# ── Viewer distribution subsystem (feature: viewer-distribution, default OFF) ──
# A stateful, media-terminating WHEP SFU + LL-HLS origin co-located in the relay
# binary but hard-isolated from the stateless opaque forwarder. Only pulled in
# when the operator opts a relay into the "distribution" role. The WebRTC stack
# is str0m (same as bilbycast-edge) with the OpenSSL DTLS backend — the pure-Rust
# dimpl DTLS stalls on localhost active↔passive handshakes (see edge Cargo.toml).
[dependencies.str0m]
version = "0.19.0"
optional = true
default-features = false
features = ["openssl"]

[dependencies.tokio-util]
version = "0.7.18"
optional = true
features = ["rt"]

# Only pulled in by `viewer-distribution-vendored` (the release variant) to
# statically vendor OpenSSL — feature unification makes str0m's openssl-sys
# vendored too, so the static-musl release binary carries no runtime libssl
# dependency. Local dev uses plain `viewer-distribution` (system OpenSSL, fast).
[dependencies.openssl]
version = "0.10"
optional = true

[features]
# OFF by default: a plain `cargo build` produces the pure opaque forwarder with
# zero media-termination surface and no OpenSSL/str0m build dependency.
default = []
viewer-distribution = ["dep:str0m", "dep:tokio-util"]
# Release variant: viewer-distribution + statically-vendored OpenSSL, for the
# static-musl release build (no system libssl at build or run time).
viewer-distribution-vendored = ["viewer-distribution", "dep:openssl", "openssl/vendored"]

[dev-dependencies]
tempfile = "3.27.0"
tokio-util = { version = "0.7.18", features = ["rt"] }

[[test]]
name = "distribution"
required-features = ["viewer-distribution"]
